# samples

./: .gitignore  README.md  go.mod  go.sum
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: java-akka.yml  java-application-insights.yml  java-aspectj.yml  java-dist-zip.yml  java-gradle-node.yml  java-gradle.yml  java-kotlin.yml  java-leiningen.yml  java-maven-yarn.yml  java-maven.yml  java-native-image.yml  java-opentelemetry.yml  java-public-static-main-native-image-maven.yml  java-quarkus-native-image-maven.yml  java-spring-boot-native-image-gradle.yml  java-war.yml  (+21 more)
ca-certificates/: README.md  ca-certificates_test.go  go.mod
dotnet-core/: dotnet_test.go
git/: git_test.go
go/: go_test.go
httpd/: README.md  httpd.conf  httpd_test.go
java/: akka_test.go  application_insights_test.go  aspectj_test.go  deps_test.go  dist_zip_test.go  gradle_test.go  jar_test.go  java_native_image_test.go  java_test.go  kotlin_test.go  leiningen_test.go  maven_test.go  opentelemetry_test.go  tools_build_test.go  war_test.go
nginx/: README.md  nginx_test.go
nodejs/: nodejs_test.go
php/: php_test.go
procfile/: procfile_test.go
python/: python_test.go
python/poetry-run/: README.md  pyproject.toml
python/poetry-run/default_app/: server.py
ruby/: ruby_test.go
scripts/: generate-test-workflow.sh  smoke.sh
tests/: dotnet_test.go  go.mod  go.sum  go_test.go  httpd_test.go  init_test.go  java_native_image_test.go  java_test.go  nginx_test.go  node_test.go  php_test.go  procfile_test.go  ruby_test.go  test_utilities.go
web-servers/: web_servers_test.go
(+312 files in other folders)
